Scenarios creation: Refining POM design along with page objects creation

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,7 +1,8 @@
 #Driver path information
+#todo: hide all applicable values
 chrome.path=C:\\WebDrivers\\chromedriver.exe
 chrome.bin=C:\\Program Files\\Google\\Chrome\\Application\\chrome.exe
 gecko.path=C:\\WebDrivers\\geckodriver.exe
 gecko.bin=C:\\Program Files\\Mozilla Firefox\\firefox.exe
 browser.name=chrome
-url=https://www.amazon.com/
+url=https://www.amazon.com.mx/
